Fixed broken UI (rolled back a redesign attempt, it'll be done later in a feature branch)

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -21,7 +21,7 @@ img.logo {
     margin-left: -114px;
     margin-top: -21px;
 }
-ul.nav.nav-tabs, ul.nav.nav-pills {
+ul.nav.nav-tabs {
     min-width: 114px;
 }
 
